--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
     </div>
 </section>
 
+<!-- Email -->
+<section id="email">
+    <div class="container">
+        <div class="text-end mb-3">
+            <button class="btn btn-sm btn-danger" id="btn-logout">Logout</button>
+        </div>
+        <div class="email-box d-grid gap-3">
+            <div class="start d-flex flex-column gap-2"></div>
+            <div class="end">
+                <div class="card overflow-hidden">
+                    <div class="email-selection-img mx-auto">
+                        <lottie-player src="./asset/img/email.json" background="transparent" speed="1" class="card-img-top" loop autoplay></lottie-player>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Please select an email first!</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Lottie Player JS -->
+<script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.6.0/dist/lottie-player.min.js"></script>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <!-- Custom JS -->
