--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <button class="btn btn-sm btn-danger" id="btn-logout">Logout</button>
         </div>
         <div class="email-box d-grid gap-3">
-            <div class="start d-flex flex-column gap-2"></div>
+            <div class="start d-flex flex-column gap-2 overflow-auto"></div>
             <div class="end">
-                <div class="card overflow-hidden">
+                <div class="card overflow-auto">
                     <div class="email-selection-img mx-auto">
                         <lottie-player src="./asset/img/email.json" background="transparent" speed="1" class="card-img-top" loop autoplay></lottie-player>
                     </div>
