social media config added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Social Media -->
+    <meta property="og:title" content="Simple Email Testing (Visual)">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="./asset/img/social.jpg">
+    <meta property="og:image:alt" content="Visual Testmail">
+    <meta property="og:url" content="https://vs-testmail.netlify.app">
+    <meta name="twitter:card" content="summary_large_image">
     <!-- Title -->
     <title>Simple Email Testing (Visual)</title>
     <!-- Favicon -->
