--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
 <section id="login" class="d-none">
     <div class="container">
         <div class="login-box mx-auto">
+            <div class="ci-alert alert alert-warning d-none" role="alert">Your credentials were invalid. Please check then try again.</div>
             <div class="brand-logo text-center">
                 <img src="./asset/img/lg-brand.png" alt="testmail logo" class="w-75">
             </div>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="namespace" placeholder="Namespace">
                 <label for="namespace">Namespace</label>
-                <div class="alert alert-warning mt-2 d-none" role="alert">This field is required.</div>
+                <div class="ui-alert alert alert-warning mt-2 d-none" role="alert">This field is required.</div>
             </div>
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="apikey" placeholder="API Key">
                 <label for="apikey">API Key</label>
-                <div class="alert alert-warning mt-2 d-none" role="alert">This field is required.</div>
+                <div class="ui-alert alert alert-warning mt-2 d-none" role="alert">This field is required.</div>
             </div>
             <button type="button" class="btn btn-outline-secondary text-uppercase w-100" id="btn-login">Login <i class="bx bx-log-in-circle"></i></button>
         </div>
