--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <button class="btn btn-sm btn-danger" id="btn-logout">Logout</button>
         </div>
         <div class="email-box position-relative d-md-grid gap-3">
-            <div class="start position-absolute d-flex flex-column gap-2 bg-white p-3 border rounded z-1 overflow-y-auto"></div>
+            <div class="start position-absolute d-flex flex-column gap-2 bg-white p-3 border rounded z-1 overflow-y-auto">
+               <h6 class="text-muted text-center">Empty</h6>
+            </div>
             <div class="end">
                 <div class="card overflow-y-auto">
                     <div class="email-selection-img mx-auto">
