signup link added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <div class="ui-alert alert alert-warning mt-2 d-none" role="alert">This field is required.</div>
             </div>
             <button type="button" class="btn btn-outline-secondary text-uppercase w-100" id="btn-login">Login <i class="bx bx-log-in-circle"></i></button>
+            <h6 class="text-secondary text-center mt-3">Don't have an account? <a href="https://testmail.app/signup" target="_blank" class="text-muted text-decoration-none">Signup</a></h6>
         </div>
     </div>
 </section>
